--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
 }
 #first-b{
     border: 0;
+    color: white;
     background-color: rgba(184, 142, 47, 1);
     height: 3rem;
     width: 9rem;
